<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<modules>
		<module>square-tools-spring-boot-starter</module>
		<module>square-log-spring-boot-starter</module>
		<module>square-mybatis-spring-boot-starter</module>
		<module>square-activiti-spring-boot-starter</module>
		<module>square-netty-spring-boot-starter-pom</module>
	</modules>
	
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<scm>
		<connection>https://gitee.com/thanks_studio/square-boot-starter.git</connection>
		<developerConnection>https://gitee.com/thanks_studio/square-boot-starter.git</developerConnection>
		<url>https://gitee.com/thanks_studio/square-boot-starter.git</url>
	</scm>
	
	<developers>
		<developer>
			<id>mr.sanq</id>
			<name>mr.sanq</name>
			<email>bin_cruel@sohu.com</email>
			<roles>
				<role>Admin</role>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
	</developers>
	
	<groupId>top.zopx</groupId>
	<artifactId>square-spring-boot-starter</artifactId>
	<version>1.4.0.220501</version>
	<packaging>pom</packaging>
	<url>https://gitee.com/thanks_studio/square-boot-starter.git</url>
	<description>square-spring-boot-starter</description>
	<name>${groupId}:${artifactId}</name>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		
		<square.version>1.4.0.220501</square.version>
		
		<spring.boot.version>2.6.4</spring.boot.version>
		<spring.cloud.version>2021.0.1</spring.cloud.version>
		<spring.cloud.alibaba.version>2021.0.1.0</spring.cloud.alibaba.version>
		
		<mybatis.plus.version>3.5.1</mybatis.plus.version>
		
		<collections.version>4.4</collections.version>
		
		<junit.version>4.12</junit.version>
		
		<lang3.version>3.12.0</lang3.version>
		<pool2.version>2.11.1</pool2.version>
		<codec.version>1.15</codec.version>
		
		<curator.version>5.2.1</curator.version>
		<zookeeper.version>3.8.0</zookeeper.version>
		
		<validator.version>7.0.4.Final</validator.version>
		
		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>

		<mybatis.plus.dynamic.version>3.5.1</mybatis.plus.dynamic.version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<!--spring boot-->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-parent</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!--spring boot-->
			
			<!--spring cloud-->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring.cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!--spring cloud-->
			
			<!--spring cloud alibaba-->
			<dependency>
				<groupId>com.alibaba.cloud</groupId>
				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
				<version>${spring.cloud.alibaba.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!--spring cloud alibaba-->
			
			<!--代码生成器-->
			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>mybatis-plus-generator</artifactId>
				<version>${mybatis.plus.version}</version>
			</dependency>
			<!--代码生成器-->
			
			<!--zookeeper starter-->
			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-recipes</artifactId>
				<version>${curator.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.apache.zookeeper</groupId>
						<artifactId>zookeeper</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper</artifactId>
				<version>${zookeeper.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!--zookeeper end-->
			
			<!-- bean copy start -->
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${org.mapstruct.version}</version>
			</dependency>
			<!-- bean copy end -->

			<!--动态数据源-->
			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>dynamic-datasource-spring-boot-starter</artifactId>
				<version>${mybatis.plus.dynamic.version}</version>
			</dependency>
			<!--动态数据源-->
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!--工具类-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${lang3.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>${collections.version}</version>
		</dependency>
		
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${codec.version}</version>
		</dependency>
	</dependencies>
	
	<profiles>
		<profile>
			<id>develop</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<finalName>${project.artifactId}-${version}</finalName>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
						<includes>
							<include>**/*.*</include>
							<include>**/**.*</include>
						</includes>
						<filtering>false</filtering>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<encoding>UTF-8</encoding>
							<annotationProcessorPaths>
								<path>
									<groupId>org.mapstruct</groupId>
									<artifactId>mapstruct-processor</artifactId>
									<version>${org.mapstruct.version}</version>
								</path>
								<!-- other annotation processors -->
							</annotationProcessorPaths>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>feature</id>
			<build>
				<finalName>${project.artifactId}-${version}</finalName>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
						<includes>
							<include>**/*.*</include>
							<include>**/**.*</include>
						</includes>
						<filtering>false</filtering>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<encoding>UTF-8</encoding>
							<annotationProcessorPaths>
								<path>
									<groupId>org.mapstruct</groupId>
									<artifactId>mapstruct-processor</artifactId>
									<version>${org.mapstruct.version}</version>
								</path>
								<!-- other annotation processors -->
							</annotationProcessorPaths>
						</configuration>
					</plugin>
					<!-- 以下都为上传jar默认配置不做修改 -->
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<!-- autoReleaseAfterClose的值为true，则脚本会自动完成在平台上close、release的操作，至此你将成功发布了 -->
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh_sonatype</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<configuration>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<useReleaseProfile>false</useReleaseProfile>
							<releaseProfiles>release</releaseProfiles>
							<goals>deploy</goals>
						</configuration>
					</plugin>
					
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<!-- 解决控制台乱码 -->
							<charset>UTF-8</charset>
							<encoding>UTF-8</encoding>
							<docencoding>UTF-8</docencoding>
							<failOnError>false</failOnError>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh_sonatype</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>ossrh_sonatype</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
</project>